--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<p>Have fun!</p>
 				</div>
 				<div class="modal-footer">
-					<a href="blitz/index.html"><button class="btn btn-success">Continue</button></a>
+					<a href="blitz/"><button class="btn btn-success">Continue</button></a>
 					<button class="btn" data-dismiss="modal">Exit</button>
 				</div>
 			</div>
