--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 								<td>Latus Rectum Length</td>
 							</tr>
 							<tr>
-								<td>F to V</td>
-								<td>F to C</td>
-								<td>F to C</td>
+								<td>Focus Coordinates</td>
+								<td>Foci Coordinates</td>
+								<td>Foci Coordinates</td>
 							</tr>
 							<tr>
 								<td>Vertex Coordinates</td>
