--- a/blitz/index.html
+++ b/blitz/index.html
@@ -1,107 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Conic Blitz</title>
-	<!--add bootstrap-->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <title>Conic Blitz</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="../assets/logo2.png" />
+  <!--add material-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css">
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-	<!-- MathJAX -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  <!-- jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-	<script src="main.js"></script>
-	<script src="../conic.js"></script>
+  <!-- MathJAX -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
-	<style type="text/css">
-		.container {
-			margin-top: 15px;
-		}
-		.jumbotron {
-			text-align: center;
-		}
-		.content-body {
-			margin-top: 6em;
-			text-align: center;
-		}
-		.content-body > div {
-			margin: 20px 0 20px 0;
-		}
-		.modal {
-			font-size: 80%;
-		}
-		.row {
-			margin: 15px;
-		}
-	</style>
+  <script src="main.js"></script>
+  <script src="../conic.js"></script>
+
+  <style type="text/css">
+    #main {
+      text-align: center;
+    }
+    .game {
+      margin: 20px 0 20px 0;
+      padding: 20px 0px 20px 0px;
+      background-color: white;
+    }
+  </style>
 </head>
 
-<body>
-	<div class="container">
-		<div class="jumbotron">
-			<h1>Conic Blitz!</h1>
-			<p>This project is presented to you by Block H 2019 Group 1 (Alcazar, Amalla, De Belen, Diaz, Feliciano, Oliveros)</p>
-		</div>
-		<div class="content-body">
-			<div id="timer">
-				<h3 id="timer-togg">2:0:0</h3>
-				<button class="btn btn-success" data-toggle="modal" data-target="#start_m" id="start_b">Start</button>
-				<button class="btn btn-danger disabled" id="end_g">End</button>
-			</div>
-			<div>
-				<p id="question"></p>
-			</div>
-			<div>
-				<p id="equation"></p>
-			</div>
-			<div id="form">
-				<div class="row">
-					<div class="col-sm-4"></div>
-					<div class="col-sm-2">
-						<button class="choice btn btn-outline-primary disabled" id="A">Lorem ipsum</button>
-					</div>
-					<div class="col-sm-2">
-						<button class="choice btn btn-outline-primary disabled" id="B">Lorem ipsum</button>
-					</div>
-					<div class="col-sm-4"></div>
-				</div>
-				<div class="row">
-					<div class="col-sm-4"></div>
-					<div class="col-sm-2">
-						<button class="choice btn btn-outline-primary disabled" id="C">Lorem ipsum</button>
-					</div>
-					<div class="col-sm-2">
-						<button class="choice btn btn-outline-primary disabled" id="D">Lorem ipsum</button>
-					</div>
-					<div class="col-sm-4"></div>
-				</div>
-				<p id="score"></p>
-			</div>
-		</div>
+<body background="../assets/grid.svg">
+  <div class="mdl-layout mdl-layout-js">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Dual Nappe</span>
 
-		<div id="start_m" class="modal fade">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h4 class="modal-title">Conic Blitz | Start</h4>
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-					</div>
-					<div class="modal-body">
-						<h5>Prompt</h5>
-						<p>Do you want to start the game?</p>
-						<p>Please note that the timer shows you the time in minutes, seconds, and milliseconds.</p>
-						<p>Have fun!</p>
-					</div>
-					<div class="modal-footer">
-						<button id="start_a" class="btn btn-success" data-dismiss="modal">Continue</button>
-						<button class="btn" data-dismiss="modal">Exit</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+        <span class="mdl-layout-spacer"></span>
+        <nav class="mdl-navigation">
+          <a href="../learn/" class="mdl-navigation__link">Learn</a>
+          <a href="../blitz/" class="mdl-navigation__link">Play</a>
+        </nav>
+      </div>
+    </header>
+  </div>
+
+  <div class="mdl-layout-content">
+    <div class="mdl-grid">
+      <div class="mdl-cell mdl-cell-1"></div>
+      <div class="mdl-cell mdl-cell-10" id="main">
+        <div id="game-controls" class="game mdl-shadow--2dp">
+          <div id="timer"><i class="material-icons">timer</i><h4 id="timer-togg">1:0:0</h4></div>
+          <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored" id="start_game">Start</button>
+          <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored" id="end_game" disabled>End</button>
+        </div>
+        <div id="game-proper" class="game mdl-shadow--2dp">
+          <i class="material-icons">code</i>
+          <div id="parameters">
+            <p id="question">Lorem ipsum</p>
+            <p id="equation">Lorem ipsum</p>
+          </div>
+          <div id="choices">
+            <button class="choice mdl-button mdl-button--colored mdl-button--raised" id="A" disabled>Lorem ipsum</button>
+            <button class="choice mdl-button mdl-button--colored mdl-button--raised" id="B" disabled>Lorem ipsum</button><br><br>
+            <button class="choice mdl-button mdl-button--colored mdl-button--raised" id="C" disabled>Lorem ipsum</button>
+            <button class="choice mdl-button mdl-button--colored mdl-button--raised" id="D" disabled>Lorem ipsum</button>
+          </div>
+        </div>
+        <div id="checker" class="game mdl-shadow--2dp">
+          <i class="material-icons">check</i>
+          <p>Score: <span id="score"></span></p>
+        </div>
+      </div>
+      <div class="mdl-cell mdl-cell-1"></div>
+    </div>
+  </div>
 </body>
 </html>
