Add assets and learn page

--- a/blitz/index.html
+++ b/blitz/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Conic Blitz</title>
+  <title>Dual Nappe | Conic Blitz</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="../assets/logo2.png" />
@@ -49,8 +49,8 @@
 
   <div class="mdl-layout-content">
     <div class="mdl-grid">
-      <div class="mdl-cell mdl-cell-1"></div>
-      <div class="mdl-cell mdl-cell-10" id="main">
+      <div class="mdl-cell mdl-cell--3-col"></div>
+      <div class="mdl-cell mdl-cell--6-col" id="main">
         <div id="game-controls" class="game mdl-shadow--2dp">
           <div id="timer"><i class="material-icons">timer</i><h4 id="timer-togg">1:0:0</h4></div>
           <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored" id="start_game">Start</button>
@@ -74,7 +74,7 @@
           <p>Score: <span id="score"></span></p>
         </div>
       </div>
-      <div class="mdl-cell mdl-cell-1"></div>
+      <div class="mdl-cell mdl-cell--3-col"></div>
     </div>
   </div>
 </body>
